# src/api/models/index.ts
@@ -1,8 +1,8 @@
 export * from './authentication-login-request-body'
 export * from './authentication-login-response-body'
-export * from './category-data'
 export * from './get-all-categories-category'
 export * from './get-all-categories-response-body'
+export * from './get-category-response-body'
 export * from './get-post-filtered-post'
 export * from './get-post-filtered-response-body'
 export * from './get-post-response-body'
